# Bicomplex-Pytorch

./: .pdm-python  README.md  pyproject.toml
bicomplex_pytorch/: __init__.py  __version__.py
bicomplex_pytorch/core/: __init__.py  arithmetic.py  representations.py  tensor_ops.py
bicomplex_pytorch/functional/: __init__.py  activation.py  attention.py  conv.py  dropout.py  functions.py  linear.py  loss.py  normalization.py  pooling.py  utils.py
bicomplex_pytorch/nn/: __init__.py
bicomplex_pytorch/nn/modules/: __init__.py  linear.py
bicomplex_pytorch/optim/: __init__.py
examples/notebooks/: 01_introduction.ipynb  02_advanced_features.ipynb
examples/satelite_navigation/: SPAN_Pixel4XL_10Hz.nmea  aligned_gnss_nmea.csv  use_case.ipynb
tests/: __init__.py
tests/test_nn/: test_linear.py
